--- a/converterui/src/components/style.css
+++ b/converterui/src/components/style.css
@@ -8,6 +8,12 @@ form {
     margin: 0 auto;
 }
 
+.input-size {
+    width: 50%;
+    margin: 0 auto;
+    margin-bottom: 20px;
+}
+
 center {
     display: flex;
     justify-content: center;
